src/objects/Target_Account__c.object
<CustomObject>
    <description>Each record is either a customer or zip code. Used to document who the approved owner(s) is for each target.</description>
    <fields>
        <fullName>AIT_Account_Number__c</fullName>
        <label>AIT Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Named</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iTAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Requires_Drop__c</fullName>
        <formula>IF( AND( Record_Type_Name__c = &quot;Customer&quot;, Pending_Add_Requests__c &gt; 0, Pending_Drop_Requests__c = 0, OwnerId &lt;&gt; &quot;00530000000rUC8&quot;) , &quot;Yes&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add Requires Drop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Names__c</fullName>
        <label>Alternate Names</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Created as part of TAL &amp; CC project</description>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegowina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo, The DRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia (local name: Hrvatska)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Timor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falkland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faroe Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gabon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVM_Account_Number__c</fullName>
        <label>EVM Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVM_Target_Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>EVM Target Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Focus_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Focus Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>created as part of TAL &amp; CC project</description>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports and Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation and Logistics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legacy_Parent_Name__c</fullName>
        <description>Created by David Brenner 20100602 so that Parent names that do not match loaded account names would not be lost. 

At some point, this field will be deleted (once parent names have been resolved or erased).</description>
        <inlineHelpText>Legacy Parent Name --Parent Account name from the original TAL Excel Spreadsheets. Only those entries that did not match accounts loaded in June 2010 will appear here.</inlineHelpText>
        <label>Legacy Parent Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner2_Percentage__c</fullName>
        <label>2nd Owner Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner2__c</fullName>
        <label>2nd Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Target_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner3_Percentage__c</fullName>
        <label>3rd Owner Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner3__c</fullName>
        <label>3rd Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Target_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner4_Percentage__c</fullName>
        <label>4th Owner Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner4__c</fullName>
        <label>4th Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Target_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Area__c</fullName>
        <formula>Text(Owner:User.Region__c)</formula>
        <label>Owner Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Position__c</fullName>
        <formula>TEXT(  Owner:User.Position__c )</formula>
        <label>Owner Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_R3__c</fullName>
        <formula>Owner:User.Employee_R3_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner R3#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Theater__c</fullName>
        <formula>Text( Owner:User.Theater__c )</formula>
        <inlineHelpText>Owner Theater</inlineHelpText>
        <label>Owner Theater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Target_Account__c</fullName>
        <label>Parent Target Account</label>
        <referenceTo>Target_Account__c</referenceTo>
        <relationshipLabel>Child Accounts</relationshipLabel>
        <relationshipName>Target_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Add_Requests__c</fullName>
        <label>Pending Add Requests</label>
        <summaryFilterItems>
            <field>Modification__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Add</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Modification__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected, Executed</value>
        </summaryFilterItems>
        <summaryForeignKey>Modification__c.Target_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pending_Drop_Requests__c</fullName>
        <label>Pending Drop Requests</label>
        <summaryFilterItems>
            <field>Modification__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Drop</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Modification__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected, Executed</value>
        </summaryFilterItems>
        <summaryForeignKey>Modification__c.Target_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created as part of TAL &amp; CC</description>
        <label>Primary Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>$RecordType.DeveloperName</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Created as part of TAL &amp; CC Project</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Split_ID__c</fullName>
        <label>Split ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Local_Account_Manager__c</fullName>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State / Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Account__c</fullName>
        <description>This field is created to identify the Variation records and the master Record to the variation record.</description>
        <inlineHelpText>This field will reference to the Master Target Account.</inlineHelpText>
        <label>Master Target Account</label>
        <referenceTo>Target_Account__c</referenceTo>
        <relationshipLabel>Target Accounts (Target Account)</relationshipLabel>
        <relationshipName>Target_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF( $RecordType.DeveloperName = &apos;Customer&apos;, &apos;Customer&apos;, &apos;Zip Code&apos;)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Finance, Insurance &amp; Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Government Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2nd_Owner__c</fullName>
        <formula>Owner2__r.Employee_R3_Number__c</formula>
        <label>2nd Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Owner__c</fullName>
        <formula>Owner3__r.Employee_R3_Number__c</formula>
        <label>3rd Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4th_Owner__c</fullName>
        <formula>Owner4__r.Employee_R3_Number__c</formula>
        <label>4th Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip / Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Target Account</label>
    <listViews>
        <fullName>Managed_Partners</fullName>
        <columns>NAME</columns>
        <columns>Street__c</columns>
        <columns>State_Province__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Type__c</field>
            <operation>equals</operation>
            <value>MP</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Managed Partners</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Parent_Target_Account__c</columns>
        <columns>State_Province__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Accounts</label>
    </listViews>
    <listViews>
        <fullName>Survey_says</fullName>
        <columns>NAME</columns>
        <columns>Parent_Target_Account__c</columns>
        <columns>State_Province__c</columns>
        <columns>State_Local_Account_Manager__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>davenport</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Survey says! . . .</label>
    </listViews>
    <nameField>
        <label>Target Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Accounts</pluralLabel>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>Used for a specific customer account (i.e. a Company)</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zip_Code</fullName>
        <active>true</active>
        <description>Represents a territory defined by a Postal Code</description>
        <label>Zip Code</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Auto__c</fullName>
        <label>Auto</label>
    </sharingReasons>
    <validationRules>
        <fullName>Theater_Not_Updated</fullName>
        <active>true</active>
        <description>If the Theater on the user is not populated, the user should be prevented from creating or modifying a TAL record.</description>
        <errorConditionFormula>ISPICKVAL( $User.Theater__c , &quot;&quot;)</errorConditionFormula>
        <errorMessage>Your profile does not have a theatre assigned. Please contact your salesforce.com administrator who can update your profile</errorMessage>
    </validationRules>
</CustomObject>